--- a/src/components/Avatar.css
+++ b/src/components/Avatar.css
@@ -13,7 +13,7 @@
 .avatar--xs {
   width: 18px;
   height: 18px;
-  font-size: 0.55rem;
+  font-size: 0.625rem;
   border-width: 1.5px;
 }
 
